Adding start files

--- a/end/01-04-nesting-elements.html
+++ b/end/01-04-nesting-elements.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div>
-    <img src="../images/richard-klein.png" alt="Richard Klein avatar">
+    <img src="../assets/richard-klein.png" alt="Richard Klein avatar">
     <h3>Richard Klein</h3>
     <p><a href="https://goo.gl/maps/L5ZDZJdoEWVvBRbM9">Gothenburg</a>, Sweden</p>
     <button>Add Friend</button>
