--- a/end/01-05-non-semantic-elements.html
+++ b/end/01-05-non-semantic-elements.html
@@ -10,19 +10,19 @@
 
 <body>
   <div>
-    <img src="../images/richard-klein.png" alt="Richard Klein avatar">
+    <img src="../assets/richard-klein.png" alt="Richard Klein avatar">
     <h3>Richard Klein</h3>
     <p><span style="color: blue">Gothenburg</span>, Sweden</p>
     <button>Add Friend</button>
   </div>
   <div>
-    <img src="../images/ella-northridge.png" alt="Ella Northridge avatar">
+    <img src="../assets/ella-northridge.png" alt="Ella Northridge avatar">
     <h3>Ella Northridge</h3>
     <p><span style="color: blue">Karlsruhe</span>, Germany</p>
     <button>Add Friend</button>
   </div>
   <div>
-    <img src="../images/samson-brown.png" alt="Samson Brown avatar">
+    <img src="../assets/samson-brown.png" alt="Samson Brown avatar">
     <h3>Samson Brown</h3>
     <p><span style="color: blue">Red Hook</span>, USA</p>
     <button>Add Friend</button>
