--- a/end/02-06-media-content.html
+++ b/end/02-06-media-content.html
@@ -7,6 +7,21 @@
   <title>Media Content</title>
 </head>
 <body>
-  <img src="../images/beach.png" alt="Beach at sunset with a dark pier">
+  <!-- Images -->
+  <img src="../assets/beach.png" alt="Beach at sunset with a dark pier">
+  <img src="https://explorecalifornia.org/_images/mission_look.jpg" alt="A person standing on a beach with rocks in the distance.">
+
+  <!-- Audio -->
+  <audio src="../assets/chill-out.mp3" controls></audio>
+  <audio controls>
+    <source type="audio/mp3" src="../assets/chill-out.mp3" >
+  </audio>
+
+  <!-- Video -->
+  <!-- <video width="450" height="275" controls>
+    <source src="../assets/sunset.mov" type="video/mp4">
+    Your browser does not support the video tag.
+  </video> -->
+
 </body>
 </html>
