--- a/end/03-02-debugging-html.html
+++ b/end/03-02-debugging-html.html
@@ -19,9 +19,8 @@
   </header>
   <main>
     <div>
-      <h1>This is my title
+      <h1>This is my title</h1>
     </div>
-    </h1>
   </main>
 </body>
 </html>
