--- a/end/02-06-media-content.html
+++ b/end/02-06-media-content.html
@@ -18,10 +18,10 @@
   </audio>
 
   <!-- Video -->
-  <!-- <video width="450" height="275" controls>
-    <source src="../assets/sunset.mov" type="video/mp4">
+  <video width="450" height="275" controls>
+    <source src="../assets/writing-in-a-journal.mp4" type="video/mp4">
     Your browser does not support the video tag.
-  </video> -->
+  </video>
 
 </body>
 </html>
