--- a/end/01-05-non-semantic-elements.html
+++ b/end/01-05-non-semantic-elements.html
@@ -12,21 +12,24 @@
   <div>
     <img src="../assets/richard-klein.png" alt="Richard Klein avatar">
     <h3>Richard Klein</h3>
-    <p><span style="color: blue">Gothenburg</span>, Sweden</p>
+    <p>Gothenburg, <span style="color: blue;">Sweden</span></p>
     <button>Add Friend</button>
   </div>
+
   <div>
     <img src="../assets/ella-northridge.png" alt="Ella Northridge avatar">
     <h3>Ella Northridge</h3>
-    <p><span style="color: blue">Karlsruhe</span>, Germany</p>
+    <p>Karlsruhe, <span style="color: blue;">Germany</span></p>
     <button>Add Friend</button>
   </div>
+
   <div>
     <img src="../assets/samson-brown.png" alt="Samson Brown avatar">
     <h3>Samson Brown</h3>
-    <p><span style="color: blue">Red Hook</span>, USA</p>
+    <p>Red Hook, <span style="color: blue;">USA</span></p>
     <button>Add Friend</button>
   </div>
+
 </body>
 
 </html>
