--- a/end/02-04-forms.html
+++ b/end/02-04-forms.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,19 +9,28 @@
 </head>
 <body>
   <form action="" method="post">
-    <label for="full-name">Full name</label> <br>
-    <input type="text" id="full-name" placeholder="Emma Bostian"> <br>
+    <label for="full-name">Full name</label>
+    <br>
+    <input type="text" id="full-name" placeholder="Emma Bostian">
+    <br>
 
-    <label for="email">Email address</label> <br>
-    <input type="text" id="email" placeholder="bostian@gmail.com"> <br>
+    <label for="email">Email address</label>
+    <br>
+    <input type="email" id="email" placeholder="bostian@gmail.com">
+    <br>
 
-    <label for="telephone">Phone number</label> <br>
-    <input type="text" id="telephone" placeholder="845-111-6621"> <br>
+    <label for="telephone">Phone number</label>
+    <br>
+    <input type="tel" id="telephone" placeholder="845-111-6621">
+    <br>
 
-    <label for="date">Date</label> <br>
-    <input type="date" id="date"> <br>
+    <label for="date">Date</label>
+    <br>
+    <input type="date" id="date">
+    <br>
 
-    <label for="num-guests">Number of guests</label> <br>
+    <label for="num-guests">Number of guests</label>
+    <br>
     <select name="num-guests" id="num-guests">
       <option value="1">1</option>
       <option value="2">2</option>
@@ -32,4 +42,5 @@
     <button type="submit">Submit</button>
   </form>
 </body>
+
 </html>
