--- a/end/04-01-create-a-blog-post-list.html
+++ b/end/04-01-create-a-blog-post-list.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Create A Blog Post List</title>
 </head>
+
 <body>
+  <h1>My Blog Posts</h1>
+  <!-- Text: -->
   <!-- blogs -->
   <div>
     <!-- blog wrapper -->
@@ -18,11 +22,10 @@
         <span>Gardening</span>
         <span>5 min read</span>
       </div>
-      <img
-        src="../assets/flowers.png"
-        alt="A yellow flower and a purple flower surrounded by other pink and yellow flowers ">
+      <img src="../assets/flowers.png"
+        alt="A yellow flower and a purple flower surrounded by other pink and yellow flowers.">
     </div>
-  
+
     <!-- blog wrapper -->
     <div>
       <!-- blog content -->
@@ -32,11 +35,9 @@
         <span>Finance</span>
         <span>8 min read</span>
       </div>
-      <img
-        src="../assets/apartment.png"
-        alt="A modern white apartment building with a blue sky.">
+      <img src="../assets/apartment.png" alt="A modern white apartment building with a blue sky.">
     </div>
-  
+
     <!-- blog wrapper -->
     <div>
       <!-- blog content -->
@@ -46,10 +47,10 @@
         <span>Travel</span>
         <span>4 min read</span>
       </div>
-      <img
-        src="../assets/traveling.png"
-        alt="A person wearing a hat in the airport with a clock in the background.">
+      <img src="../assets/traveling.png" alt="A person wearing a hat in the airport with a clock in the background.">
     </div>
   </div>
+
 </body>
+
 </html>
