--- a/end/04-02-create-a-class-schedule.html
+++ b/end/04-02-create-a-class-schedule.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Create A Class Schedule</title>
 </head>
+
 <body>
   <table>
     <thead>
@@ -35,13 +37,13 @@
       <tr>
         <td>Calculus II</td>
         <td>Simon</td>
-        <td>RB255</td>
+        <td>R255</td>
         <td>F</td>
         <td>17:00 - 20:00</td>
       </tr>
       <tr>
         <td>French</td>
-        <td>BcGinness</td>
+        <td>McGinness</td>
         <td>AG9</td>
         <td>MWF</td>
         <td>11:30 - 12:50</td>
@@ -56,4 +58,5 @@
     </tbody>
   </table>
 </body>
+
 </html>
