--- a/end/05-01-the-dom.html
+++ b/end/05-01-the-dom.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The DOM</title>
 </head>
+
 <body>
   <header id="header">
     <nav id="nav">
@@ -22,8 +24,9 @@
     const nav = header.childNodes[1];
     const list = nav.childNodes[1];
     const firstListItem = list.childNodes[1];
-    const firstLink = firstListItem.childNodes[0]
-    console.log(firstLink)
+    const firstLink = firstListItem.childNodes[0];
+    console.log(firstLink);
   </script>
 </body>
+
 </html>
