--- a/start/01-05-non-semantic-elements.html
+++ b/start/01-05-non-semantic-elements.html
@@ -8,6 +8,20 @@
 </head>
 
 <body>
+  <img src="../assets/richard-klein.png" alt="Richard Klein avatar">
+  <h3>Richard Klein</h3>
+  <p>Gothenburg, Sweden</p>
+  <button>Add Friend</button>
+
+  <img src="../assets/ella-northridge.png" alt="Ella Northridge avatar">
+  <h3>Ella Northridge</h3>
+  <p>Karlsruhe, Germany</p>
+  <button>Add Friend</button>
+
+  <img src="../assets/samson-brown.png" alt="Samson Brown avatar">
+  <h3>Samson Brown</h3>
+  <p>Red Hook, USA</p>
+  <button>Add Friend</button>
 </body>
 
 </html>
