--- a/start/04-01-create-a-blog-post-list.html
+++ b/start/04-01-create-a-blog-post-list.html
@@ -10,7 +10,7 @@
 
 <body>
   <!-- Text: -->
-  <!-- The Art Of Growing Sunflowers - Why It's Not As Easy As You Might Think
+  The Art Of Growing Sunflowers - Why It's Not As Easy As You Might Think
   Known as one of the happiest flowers, sunflowers seem like they'd be easy to grow...or do they.
   Gardening
   5 min read
@@ -23,8 +23,8 @@
   How To Travel The World Full Time On A Budget
   Tips on how you can travel for cheap and experience the world.
   Travel
-  4 min read  -->
-    
+  4 min read
+
 </body>
 
 </html>
