--- a/start/05-01-the-dom.html
+++ b/start/05-01-the-dom.html
@@ -9,6 +9,19 @@
 </head>
 
 <body>
+  <header id="header">
+    <nav id="nav">
+      <ul id="nav-list">
+        <li id="item-one"><a href="#" id="link-one">Link 1</a></li>
+        <li id="item-two"><a href="#" id="link-two">Link 2</a></li>
+        <li id="item-three"><a href="#" id="link-three">Link 3</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <script>
+    
+  </script>
 </body>
 
 </html>
