--- a/end/01-04-nesting-elements.html
+++ b/end/01-04-nesting-elements.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nesting Elements</title>
 </head>
+
 <body>
   <div>
-    <img src="../assets/richard-klein.png" alt="Richard Klein avatar">
+    <img src="../assets/richard-klein.png" alt="Richard Klein avatar" />
     <h3>Richard Klein</h3>
-    <p><a href="https://goo.gl/maps/L5ZDZJdoEWVvBRbM9">Gothenburg</a>, Sweden</p>
+    <p><a href="https://goo.gl/maps/gecFfuiYXsty1NTy7">Gothenburg</a>, Sweden</p>
     <button>Add Friend</button>
   </div>
 </body>
+
 </html>
