--- a/end/02-06-media-content.html
+++ b/end/02-06-media-content.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Media Content</title>
 </head>
+
 <body>
   <!-- Images -->
-  <img src="../assets/beach.png" alt="Beach at sunset with a dark pier">
-  <img src="https://explorecalifornia.org/_images/mission_look.jpg" alt="A person standing on a beach with rocks in the distance.">
-
+  <img src="../assets/beach.png" alt="Beach at sunset with a dark pier.">
+  <img src="https://explorecalifornia.org/_images/mission_look.jpg"
+    alt="A person standing on a beach with rocks in the distance.">
   <!-- Audio -->
-  <audio src="../assets/chill-out.mp3" controls></audio>
   <audio controls>
-    <source type="audio/mp3" src="../assets/chill-out.mp3" >
+    <source type="audio/mp3" src="../assets/chill-out.mp3">
   </audio>
-
   <!-- Video -->
   <video width="450" height="275" controls>
     <source src="../assets/writing-in-a-journal.mp4" type="video/mp4">
-    Your browser does not support the video tag.
+    Your browser doesn't support the video tag.
   </video>
-
 </body>
+
 </html>
